Correct color and sizes added to paragraphs, pane-titles (h1, h2, h3 etc.) and more. Alignment improvements

--- a/public_html/profiles/os2sub/themes/custom/site_6juli/src/scss/custom/components/_buttons.scss
+++ b/public_html/profiles/os2sub/themes/custom/site_6juli/src/scss/custom/components/_buttons.scss
@@ -18,7 +18,7 @@
   font-family: $font-lato;
   font-weight: bold;
     margin-right: 15px;
-  font-size: 1.525em;
+  font-size: 1.625em;
   width: 180px;
     display: flex;
     justify-content: center;
