--- a/public_html/profiles/os2sub/themes/custom/site_6juli/src/scss/custom/entities/view/_os2web-events-slideshow.scss
+++ b/public_html/profiles/os2sub/themes/custom/site_6juli/src/scss/custom/entities/view/_os2web-events-slideshow.scss
@@ -60,6 +60,7 @@ $header-size: 112px;
   .bottom-part {
     position: absolute;
     bottom: 60px;
+      left: 0;
   }
 
   .views-field-title {
